# Qwen3-TTS-OpenV

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py  snip_snip.py
openivno_notebook_reference/: qwen_3_tts_helper.py
src/: test_modules.py
src/openvino/: ov_convert.py  ov_infer.py
src/torch_functional/: qwen3_tts.py  qwen3_tts_tokenizer.py  test_tts.py
src/torch_modules/: __init__.py  code_predictor.py  constants.py  generate.py  speaker_encoder.py  speech_decoder.py  talker.py
